--- a/app/src/main/res/layout/rules_activity.xml
+++ b/app/src/main/res/layout/rules_activity.xml
@@ -13,10 +13,11 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="55dp"
-        android:text="Busschauffören"
+        android:text="textView"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
-        android:textSize="40sp"
+        android:textSize="30sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
@@ -33,4 +34,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/rulesText"
+        android:layout_width="344dp"
+        android:layout_height="333dp"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rulesTitleView" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="32dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
