--- a/app/src/main/res/layout/cardgame_activity.xml
+++ b/app/src/main/res/layout/cardgame_activity.xml
@@ -7,6 +7,8 @@
 
     <ImageView
         android:id="@+id/fourthRowSecondCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="68dp"
         android:layout_height="106dp"
         android:layout_marginStart="23dp"
@@ -18,6 +20,8 @@
 
     <ImageView
         android:id="@+id/fourthRowFirstCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="68dp"
         android:layout_height="106dp"
         android:layout_marginBottom="124dp"
@@ -31,6 +35,8 @@
 
     <ImageView
         android:id="@+id/fifthRowFirstCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="63dp"
         android:layout_height="99dp"
         android:layout_marginStart="135dp"
@@ -45,6 +51,8 @@
 
     <ImageView
         android:id="@+id/thirdRowFirstCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginEnd="20dp"
@@ -57,6 +65,8 @@
 
     <ImageView
         android:id="@+id/thirdRowThirdCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginStart="20dp"
@@ -68,6 +78,8 @@
 
     <ImageView
         android:id="@+id/thirdRowSecondCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:contentDescription="ThirdRowSecondCard"
@@ -80,6 +92,8 @@
 
     <ImageView
         android:id="@+id/secondRowFirstCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginEnd="16dp"
@@ -92,6 +106,8 @@
 
     <ImageView
         android:id="@+id/secondRowThirdCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginStart="20dp"
@@ -104,6 +120,8 @@
     <ImageView
 
         android:id="@+id/secondRowFourthCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginStart="16dp"
@@ -115,6 +133,8 @@
 
     <ImageView
         android:id="@+id/secondRowSecondCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:scaleType="centerCrop"
@@ -167,6 +187,8 @@
 
     <ImageView
         android:id="@+id/firstRowFirstCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginStart="10dp"
@@ -178,6 +200,8 @@
 
     <ImageView
         android:id="@+id/firstRowSecondCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginStart="10dp"
@@ -190,6 +214,8 @@
 
     <ImageView
         android:id="@+id/firstRowFourthCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginStart="10dp"
@@ -202,6 +228,8 @@
 
     <ImageView
         android:id="@+id/firstRowFifthCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:layout_marginEnd="10dp"
@@ -212,6 +240,8 @@
 
     <ImageView
         android:id="@+id/firstRowThirdCard"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="66dp"
         android:layout_height="106dp"
         android:scaleType="centerCrop"
